# DoraBora

./: .env.dev  .gitignore  LICENSE  architecture.md  asyncio_main.py  conftest.py  constants.py  data_model.md  database.py  datamodel.py  docker-compose.yml  init_db.py  login_logic.py  login_logic_v2.py  login_logic_werks.py  main.py  readme.md  tornado_main.py  tornado_main_v2.py  twisted_main.py
dora_bora/: Dockerfile  constants.py  database_accessor.py  datamodel.py  game_actions.py  manage.py  non_blocking_queue.py  parsers.py  protocol.py  pyproject.toml  shared_state.py
dora_bora/DoraBora/: asgi.py  counter.py  server.py  settings.py  urls.py  utils.py  wsgi.py
dora_bora/Game/: ank_crypto.py  ank_encodings.py  decompile_map_data.py  exchange.py  fight.py  game_actions.py  server.py
dora_bora/Game/migrations/: 0001_initial.py  0002_alter_monstergroup__map_alter_monstergroup_template.py  0002_map_character_map_cell_id_character__map.py  0002_remove_monster_initiative_character_action_points_and_more.py  0003_remove_map_dofus_id.py  0004_map_doors.py  0005_monster.py
dora_bora/Game/models/: __init__.py  character.py  map.py  monster.py
dora_bora/Game/procedures/: A_account.py  B_basic.py  GA_game_actions.py  GK_game_action_acknoledges.py  G_game.py  __init__.py  miscellaneous.py
dora_bora/Game/seeds/: doors.csv  monsters.csv
dora_bora/Login/: ank_crypto.py  server.py
dora_bora/Login/migrations/: 0001_initial.py  0002_account_is_game_master.py  0003_alter_account_switch_token.py
dora_bora/Login/models/: __init__.py  account.py  server.py
dora_bora/Login/procedures/: A_account.py  __init__.py  connection.py
dora_bora/database/: __init__.py  accounts.py  base.py  characters.py  maps.py  servers.py
dora_bora/datamodel/: __init__.py  account.py  character.py  map.py  server.py
dora_bora/formatters/: game.py
dora_bora/logics/: __init__.py  base_logic.py  exceptions.py  game.py  login.py
dora_bora/logics/game/: __init__.py  account.py  basic.py  chat.py  child.py  conquest.py  game.py
dora_bora/logics/login/: __init__.py
dora_bora/shared_state/: __init__.py  base_state.py  characters.py  clients.py  game_actions.py  maps.py
game/: main.py  pyproject.toml
game/service/: config.py  exchange.py  management.py  service.py  shared_state.py
game/service/datamodel/: __init__.py  account.py  character.py  map.py  server.py
game/service/handlers/: __init__.py  account.py  basic.py  chat.py  conquest.py  game.py  miscellaneous.py
integration/: Dockerfile  crypt.py  pyproject.toml  test_client.py
login/: Dockerfile  main.py
(+80 files in other folders)
