[tool.poetry]
name = "Login"
version = "0.1.0"
description = "DoraBora's login service."
authors = ["tlebrize <lebrize.t@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.26.0"


[tool.poetry.group.dev.dependencies]
ipython = "^8.19.0"

[tool.black]
line-length = 120

[tool.ruff]
select = [ # https://docs.astral.sh/ruff/rules/
	"F",   # PyFlakes
	"E",   # PyCodeStyle
	"W",   # PyCodeStyle
	"I",   # Isort
]
fixable = ["ALL"]
line-length = 120
target-version = "py311"
unsafe-fixes = true

[tool.pytest.ini_options]
python_files = ["test_*.py"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
